# intent-cache-agent-adk

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  adk_intent_cache_demo.py  basic_usage.py  redis_intent_cache_demo.py  sql_intent_cache_demo.py
src/intent_cache_agent/: __init__.py  adk_agent.py  adk_tool.py  cache.py  canonicalization.py  core.py  interfaces.py  key_builder.py  models.py  normalizers.py  redis_cache.py  registry.py
tests/: test_cache.py  test_canonicalization.py  test_core.py  test_key_builder.py  test_normalizers.py
